# czkatran

./: CMakeLists.txt  c17  c17.cc  folly.sh  test  test.cc  test.h
cmake/: CMakeLists.txt  a.cc  a.h  b.cc  b.h  c.cc  c.h  test.cc
czkatran/: CMakeLists.txt
czkatran/decap/: CMakeLists.txt  CMake的例子.txt  Makefile-bpf  XdpDecap.cc  XdpDecap.h  XdpDecapStrcuts.h  set_up_decap_kern.o.sh
czkatran/decap/bpf/: decap.bpf.c  decap.bpf.h
czkatran/decap/testing/: CMakeLists.txt  XdpDecapGueTestFixtures.h  XdpDecapTestFixtures.h  text.txt  valgrind.sh  xdp.sh  xdpdecap_tester.cc  问题.txt
czkatran/example_grpc/: GrpcSingalHandler.cc  GrpcSingalHandler.h  build.sh  build_grpc.sh  czKatranGrpcSerice.cc  czKatranGrpcSerice.h  czkatran_server.cc
czkatran/example_grpc/goclient/src/czkatranc/: go.mod
czkatran/example_grpc/goclient/src/czkatranc/czkatranc/: czkatranc.go
czkatran/example_grpc/goclient/src/czkatranc/lb_czKatran/: czkatran.grpc.pb.cc  czkatran.grpc.pb.h  czkatran.pb.cc  czkatran.pb.go  czkatran.pb.h  czkatran_grpc.pb.go
czkatran/example_grpc/goclient/src/czkatranc/lb_czkatran/: czkatran.pb.go
czkatran/example_grpc/goclient/src/czkatranc/main/: main.go
czkatran/example_grpc/protos/: czkatran.proto
czkatran/lib/: Balancer_structs.h  BaseBpfAdapter.cc  BaseBpfAdapter.h  BpfAdapter.cc  BpfAdapter.h  BpfLoader.cc  BpfLoader2.cc  BpfLoader2.h  BpfLoater.h  CHHelper.cc  CHHelper.h  CMakeLists.txt  DataWriter.h  EventPipeCallback.cc  EventPipeCallback.h  FileWriter.cc  FileWriter.h  IOBuffWriter.cc  IOBuffWriter.h  IpHelpers.cc  IpHelpers.h  MacHelpers.cc  MacHelpers.h  MaglevBase.cc  MaglevBase.h  MaglevHash.cc  MaglevHash.h  MaglevHashV2.cc  MaglevHashV2.h  MaglevTest.sh  Maglev_test.cc  MonitoringServiceCore.cc  MonitoringServiceCore.h  MonitoringStructs.cc  MonitoringStructs.h  MurmurHash3.cc  MurmurHash3.h  Netlink.cc  Netlink.h  PcapMsg.cc  (+22 more)
czkatran/lib/Testing/: Base64.sh  Base64Helpers.cc  Base64Helpers.h  Base64HelpersTest.cc  BpfTester.cc  BpfTester.h  CMakeLists.txt  PacketAttributes.h  PcapParser.cc  PcapParser.h  build.sh  czkatranGueOptionalTestFixtures.h  czkatranGueTestFixtures.h  czkatranHCTestFixtures.h  czkatranOptionalTestFixtures.h  czkatranTPRTestFixtures.h  czkatranTestFixtures.h  czkatranTestProvision.cc  czkatranTestProvision.h  czkatranTestUtil.cc  czkatranTestUtil.h  czkatranUdpStableRtTestFixtures.h  czkatran_testing.cc  scapy_.py
czkatran/lib/Testing/TestData/: czkatranGueOptionalTestFixtures.h  czkatranGueTestFixtures.h  czkatranHCTestFixtures.h  czkatranOptionalTestFixtures.h  czkatranTPRTestFixtures.h  czkatranTestFixtures.h  czkatranUdpStableRtTestFixtures.h
czkatran/lib/bpf/: Makefile  balancer.bpf.c  balancer_consts.h  balancer_helpers.h  balancer_maps.h  balancer_structs.h  build.xdp.sh  control_data_maps.h  csum_helpers.h  encap_helpers.h  handle_icmp.h  healthchecking.bpf.c  healthchecking.consts.h  healthchecking.maps.h  healthchecking_helpers.h  healthchecking_ipip.c  healthchecking_structs.h  packet_encap.h  packet_parse.h  xdp_pktcntr.c  xdp_root.c
czkatran/lib/tests/: CHHelperTest.cc  CHHelperTest.sh  EventPipeCallBackTest.cc  EventPipeCallBackTest.sh  IpHelperTest.sh  IpHelpersTest.cc  MonitoringServiceCoreTest.cc  MonitoringServiceCoreTest.sh  PcapWriterTest.cc  PcapWriterTest.sh  PipeWriterTest.cc  PipeWriterTest.sh  VipTest.cc  VipTest.sh  bu.sh  build.sh  czKatranLbTest.cc  czKatranLbTest.sh  valgrind.sh
czkatran/start_czkatran/start_czkatran/src/start_czkatran/: go.mod
czkatran/start_czkatran/start_czkatran/src/start_czkatran/affinitize/: affinitize.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/czkatranc/: czkatranc.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/defalut_watcher/: defalut_watcher.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/irq_parser/: irq_parser.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/lb_czkatran/: czkatran_grpc.pb.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/main/: main.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/start_binary/: start_binary.go
czkatran/start_czkatran/start_czkatran/src/start_czkatran/topology_parser/: topology_parser.go
czkatran/tcp/udp/ip/: GUE_FOU.md  clang_unroll.cc  ipip.sh  ipv6.md  test
explain/: LPM_trie.c  LRU.cc  encap.md  icmp.c  katran涉及到的算法总结.md  katran设计总结.md  ketama.cc  main.go  关于balancer.bpf.c---xdp程序的剖析.md
